--- a/KriddieFolder/.gitignore
+++ b/KriddieFolder/.gitignore
@@ -9,3 +9,4 @@ GAVItrib2_Geomorphology_2022-04-10-IE-MJ05CFSW.Rmd
 GAVItrib3_Geomorphology_2022-04-10-IE-MJ05CFSW.Rmd
 synop_fig1_2022-03-24-IE-MJ05CFSW.Rmd
 synoptic_k600_2022-02-11-IE-MJ05CFSW.R
+.DS_Store
